# CPP_projects

nodebot_ros/: README.md
nodebot_ros/MCU code/: final_version_bot_mover.py  settings.sh  upload.sh
nodebot_ros/MCU code/ArduinoMini PRO/Skidsteer_UDP/: Skidsteer_UDP.ino
nodebot_ros/MCU code/ArduinoMini PRO/TankStyleUSB/: TankStyleUSB.ino
nodebot_ros/MCU code/NodeMCU/: README.md
nodebot_ros/MCU code/NodeMCU/IMU-pantilt/: IMU-pantilt.ino
nodebot_ros/MCU code/NodeMCU/Robot_UDP/: Robot_UDP.ino
nodebot_ros/MCU code/NodeMCU/Skidsteer_USB/: Skidsteer_USB.ino
nodebot_ros/MCU code/NodeMCU/pureIMU/: pureIMU.ino
nodebot_ros/MCU code/Untitled Folder/: setup.sh  test_serial.py  usb_test.py
nodebot_ros/MCU code/ultrasonic/: ultrasonic.ino
nodebot_ros/Nvidia Jetson/: test_video.py
nodebot_ros/ROS/launch/: video_stream_opencv.launch
nodebot_ros/ROS/ws/devel/: .catkin  .rosinstall  setup.sh
nodebot_ros/cpp/: .cproject  CMakeLists.txt  README.md  video.cpp  video_dlib_correlation.cpp  video_test.cpp
nodebot_ros/python/: simple.ui
nodebot_ros/python/distance-to-camera/: distance_to_camera.py
nodebot_ros/python/scripts/: Darknet.py  cnn_face_detector.py  computer_vision.py  connect_Bot.py  contours.py  dashboard_gui.py  get_points.py  glyphfunctions.py  helper.py  ipcam.py  optical_flow_tracker.py  start.py  status.py  visual_odometry.py  visual_odometry_test.py  webcam.py
nodebot_ros/ros/stitcher/: CMakeLists.txt~  package.xml  package.xml~
nodebot_ros/ros/tapbot/: CMakeLists.txt  package.xml
nodebot_ros/ros/tf_broadcaster/: CMakeLists.txt  package.xml
nodebot_ros/rpi/: client.py  control.py  sabergame.py  sabertooth.py  test.py  usb_test.py
(+39 files in other folders)
